attchments not visible fix

--- a/src/app/shared/components/ta-upload-files/components/ta-upload-file/ta-upload-file.component.scss
+++ b/src/app/shared/components/ta-upload-files/components/ta-upload-file/ta-upload-file.component.scss
@@ -2,7 +2,7 @@
     width: 168px;
     height: 194px;
     border-radius: 2px;
-    display: grid;
+    display: grid !important;
     grid-template-rows: 160px 1fr;
     row-gap: 7px;
     align-items: center;
